[package]
name = "sharded-log"
version = "0.0.1"
edition = "2021"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = "A sharded log for multi-threaded logging"
license = "GPL-3.0"
repository = "https://github.com/komora-io/sharded-log"
documentation = "https://docs.rs/sharded-log/"
keywords = ["logging", "multi-threaded", "performance", "database", "transaction"]
categories = ["development-tools", "concurrency", "filesystem", "database-implementations"]
readme = "README.md"

[dependencies]
crc32fast = "1.3.2"
fs2 = "0.4.3"
fault-injection = "1.0.1"
